--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "dependencies": {
     "jest": "26.6.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "7.13.16",
+    "@babel/core": "7.14.0",
+    "@babel/node": "7.13.13",
+    "@babel/preset-env": "7.14.1",
+    "babel-jest": "26.6.3"
+  },
   "scripts": {
     "test": "jest"
   },
